--- a/src/app.html
+++ b/src/app.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html lang="it">
+<title>
+	Tende, Serrande, Tapparelle e Zanzariere a Chiavari, Rapallo, Sestri Levante e Moneglia
+</title>
 
 <head>
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	<meta name=description
+		content="installazione e manutenzione tende da sole, pergotende, serrande, tapparelle e zanzariere a Chiavari, Rapallo, Sestri Levante e Moneglia" />
+
 	%sveltekit.head%
 	<link rel="stylesheet" href="/files/themify-icons.css">
 </head>
