--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<meta name=description
-		content="installazione e manutenzione tende da sole, pergotende, serrande, tapparelle e zanzariere a Chiavari, Rapallo, Sestri Levante e Moneglia" />
+		content="preventivi gratuiti, riparazioni, motorizzazioni installazioni tende da sole, pergotende, serrande, tapparelle e zanzariere a Chiavari, Rapallo, Sestri Levante e Moneglia" />
 
 	%sveltekit.head%
 	<link rel="stylesheet" href="/files/themify-icons.css">
